Fix Pollrich logo spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,8 +79,8 @@ img {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 220px;
-  height: 78px;
+  width: 250px;
+  height: 74px;
 }
 
 .brand-logo {
@@ -858,12 +858,12 @@ img {
   }
 
   .brand-logo-wrap {
-    width: 150px;
-    height: 54px;
+    width: 168px;
+    height: 50px;
   }
 
   .footer-logo {
-    width: 180px;
+    width: 200px;
   }
 
   .search-panel {
